# sulion

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  compose.yaml  platform.yml  secret-paths.yml  session-broker-design.md
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile  Dockerfile.e2e  entrypoint.sh
backend/broker_migrations/: 0002_pty_credentials.sql
backend/docs/: toolset.md
backend/hooks/: session-start.sh
backend/migrations/: 0001_init.sql  0002_orphaned_state.sql  0003_session_labels.sql  0004_canonical_blocks.sql  0005_event_canonical_fields.sql  0006_agent_sessions.sql  0012_runtime_state.sql  0013_ingest_projection_versions.sql  0014_agent_runtime_and_metadata.sql  0015_workspaces.sql
backend/src/: agent.rs  canonical.rs  codex.rs  config.rs  container_runner.rs  correlate.rs  credential_helper.rs  db.rs  e2e.rs  future_prompts.rs  git.rs  ingester.rs  lib.rs  library.rs  main.rs  pty.rs  repo_state.rs  routes.rs  search.rs  secret_broker.rs  secret_protocol.rs  secret_pty.rs  stats.rs  worktree.rs
backend/src/agent/: mock_transcripts.rs
backend/src/api/: admin_routes.rs  app_state_routes.rs  future_prompt_routes.rs  library_routes.rs  mod.rs  repo_routes.rs  routes.rs  session_routes.rs  stats.rs  timeline_routes.rs  workspace_routes.rs  ws.rs
backend/src/ingest/: file_scan.rs  ingester.rs  maintenance.rs  metadata.rs  mod.rs  projection.rs  reset.rs
backend/src/ingest/projection/: file_trace.rs  filters.rs  write.rs
backend/src/ingest/timeline/: mod.rs  project.rs  types.rs
backend/tests/: correlate_integration.rs  db_integration.rs  ingester_integration.rs  pty_integration.rs  rest_integration.rs  structure_lint.rs  workspace_integration.rs  ws_integration.rs
backend/tests/fixtures/: codex-rich-lineage-child.jsonl  codex-rich-lineage-parent.jsonl
broker/: .dockerignore  Dockerfile
docs/: architecture.md  backlog.md  changelog.md  deploy.md  design.md  development.md  e2e-coverage-plan.md  ingestion.md  secrets.md  state-management.md  user-guide.md
docs/architecture/: ingestion-runtime-boundary.md
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
frontend/e2e/: 01-navigation-and-tabs.spec.ts  02-timeline-and-workspace.spec.ts  03-codex-and-stats.spec.ts  04-library-and-terminal.spec.ts  05-mobile.spec.ts  06-mock-terminal.spec.ts  07-agent-roundtrip.spec.ts  08-secrets.spec.ts  helpers.ts
frontend/eslint-rules/: README.md  index.js  max-jsx-props.js  no-direct-fetch.js  no-inline-styles.js  no-js-file-extension.js  no-non-vitest-testing.js  no-raw-undefined-union.js
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
frontend/src/api/: client.test.ts  client.ts  types.ts  ws.ts
frontend/src/auth/: cognito.ts
frontend/src/components/: DiffTab.css  DiffTab.tsx  FileTab.css  FileTab.tsx  FileTracePanel.test.tsx  FileTracePanel.tsx  FuturePromptsModal.css  FuturePromptsModal.test.tsx  FuturePromptsModal.tsx  Layout.css  Layout.test.tsx  Layout.tsx  LibraryPanel.test.tsx  LibraryPanel.tsx  LibrarySection.css  LibrarySection.test.tsx  LibrarySection.tsx  LibraryTab.css  MonitorPane.css  MonitorPane.test.tsx  MonitorPane.tsx  PromptTab.test.tsx  PromptTab.tsx  Rail.css  Rail.tsx  RefTab.tsx  ReindexButton.css  ReindexButton.test.tsx  ReindexButton.tsx  SearchTab.tsx  SecretsTab.css  SecretsTab.test.tsx  SecretsTab.tsx  SessionEndedPane.css  SessionEndedPane.test.tsx  SessionEndedPane.tsx  Sidebar.css  Sidebar.test.tsx  Sidebar.tsx  StatsStrip.css  (+10 more)
frontend/src/components/common/: ConfirmDialog.css  ConfirmDialog.test.tsx  ConfirmDialog.tsx  ContextMenu.css  ContextMenu.test.tsx  (+8 more)
frontend/src/hooks/: useMediaQuery.ts
frontend/src/icons/: Icon.tsx  index.ts
frontend/src/lib/: types.ts
frontend/src/state/: AppCommands.ts  RepoStore.test.tsx  RepoStore.tsx  SecretStore.ts  SessionStore.tsx  TabStore.test.ts  TabStore.tsx  useLastViewed.test.ts  useLastViewed.ts
frontend/src/styles/: tokens.css
frontend/src/test/: appState.ts  setup.ts
infrastructure/terraform/: outputs.tf  platform.tf
runner/: .dockerignore  Dockerfile
scripts/: run-backend-integration-tests.sh  run-e2e-stack.mjs  truenas-bootstrap.sh
(+61 files in other folders)
