[package]
name = "sulion"
version = "0.1.0"
edition = "2021"
publish = false

[features]
integration-tests = []

[lib]
name = "sulion"
path = "src/lib.rs"

[[bin]]
name = "sulion"
path = "src/main.rs"

[[bin]]
name = "sulion-broker"
path = "src/bin/sulion_broker.rs"

[[bin]]
name = "sulion-runner"
path = "src/bin/sulion_runner.rs"

[dependencies]
axum = { version = "0.7", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "migrate",
    "chrono",
    "uuid",
    "json",
] }
portable-pty = "0.8"
libc = "0.2"
bytes = "1"
futures = "0.3"
vt100 = "0.15"
walkdir = "2"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
async-stream = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
jsonwebtoken = "9"
url = "2"
chacha20poly1305 = "0.10"
base64 = "0.22"
ring = "0.17"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tokio-tungstenite = "0.24"
http = "1"
tempfile = "3"
syn = { version = "2", features = ["full", "visit"] }
proc-macro2 = { version = "1", features = ["span-locations"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
